"great" menu overhaul done
