# docs/swagger.yaml
@@ -4,62 +4,87 @@ components:
     MenuVec:
       type: array
       items:
-        $ref: "#/components/schemas/MenuVecInner"
-    MenuVecInner:
-      type: object
-      properties:
-        "0":
+        type: array
+        items:
           type: object
           properties:
-            id:
-              type: integer
-              format: int32
-            image:
-              type: string
-            max_supply:
-              type: integer
-              format: int32
-            name:
-              type: string
-            price:
-              type: number
-              format: float
-            type:
-              type: string
-              enum:
-                - Soup
-                - Main
-            week_day:
-              type: integer
-              format: int32
-          required:
-            - id
-            - image
-            - max_supply
-            - name
-            - price
-            - type
-            - week_day
-        "1":
+            "dinner":
+              $ref: "#/components/schemas/Dinners"
+            "extras":
+              type: array
+              items:
+                $ref: "#/components/schemas/Extras"
+    MenuDay:
+      type: object
+      properties:
+        "dinners":
           type: array
           items:
-            type: object
-            properties:
-              id:
-                type: integer
-                format: int32
-              name:
-                type: string
-              price:
-                type: number
-                format: float
-            required:
-              - id
-              - name
-              - price
+            $ref: "#/components/schemas/Dinners"
+        "extras":
+          type: array
+          items:
+            $ref: "#/components/schemas/Extras"
       required:
-        - "0"
-        - "1"
+        - "dinners"
+        - "extras"
+    Extras:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        name:
+          type: string
+        price:
+          type: number
+          format: float
+        image:
+          type: string
+        type:
+          type: string
+          enum:
+            - Filler
+            - Beverage
+            - Salad
+      required:
+            - id
+            - name
+            - price
+            - image
+            - type
+    Dinners:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        image:
+          type: string
+        maxSupply:
+          type: integer
+          format: int32
+        name:
+          type: string
+        price:
+          type: number
+          format: float
+        type:
+          type: string
+          enum:
+            - Soup
+            - Main
+          weekDay:
+              type: integer
+              format: int32
+      required:
+          - id
+          - image
+          - maxSupply
+          - name
+          - price
+          - type
+          - weekDay
     UserChangePassword:
       type: object
       properties:
@@ -124,7 +149,7 @@ paths:
           content:
             "*/*":
               schema:
-                $ref: "#/components/schemas/MenuVec"
+                $ref: "#/components/schemas/MenuDay"
         "500":
           description: Internal Server Error
       parameters:
@@ -144,7 +169,7 @@ paths:
           content:
             "*/*":
               schema:
-                 $ref: "#/components/schemas/MenuVec"
+                 $ref: "#/components/schemas/MenuDay"
         "500":
           description: Internal Server Error
   /menu/update:
