# src/routes/menu.rs
@@ -20,7 +20,9 @@ use crate::{
     scraper::{scrape_menu, update_menu},
 };
 
-type MenuResult3d = Result<web::Json<Vec<Vec<(dinner::Model, Vec<extras::Model>)>>>, ServiceError>;
+use super::structs::DinnerWithExtras;
+
+type MenuResult3d = Result<web::Json<Vec<Vec<DinnerWithExtras>>>, ServiceError>;
 type MenuResult = Result<web::Json<MenuOneDay>, ServiceError>;
 
 async fn get_menu(conn: &DatabaseConnection, day: u8) -> MenuResult {
@@ -73,7 +75,10 @@ async fn get_menu_3d(conn: &DatabaseConnection) -> MenuResult3d {
             dinner_day = Vec::with_capacity(4);
             last_day = dinner.week_day;
         } else {
-            dinner_day.push((mem::take(dinner), mem::take(extras)));
+            dinner_day.push(DinnerWithExtras {
+                dinner: mem::take(dinner),
+                extras: mem::take(extras),
+            });
         }
     }
     response.push(dinner_day);
